# PDFPurr

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  corpus-test.yml  publish.yml  release.yml
benches/: pdf_bench.rs
examples/: create_pdf.rs  extract_text.rs  render_page.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_content_stream.rs  fuzz_document.rs  fuzz_object.rs
src/: document.rs  error.rs  lib.rs  page_builder.rs
src/accessibility/: auto_tag.rs  mod.rs  structure_builder.rs  structure_tree.rs  validation.rs
src/content/: analysis.rs  builder.rs  mod.rs  operators.rs  structure_detection.rs  text.rs
src/core/: filters.rs  mod.rs  objects.rs
src/encryption/: key.rs  mod.rs  rc4.rs  standard.rs
src/fonts/: cidfont.rs  cmap.rs  common.rs  embedding.rs  encoding.rs  font.rs  graphics_state.rs  mod.rs  standard14.rs
src/forms/: field.rs  mod.rs
src/images/: embedding.rs  image.rs  mod.rs
src/ocr/: config.rs  constants.rs  engine.rs  hybrid.rs  layout.rs  mod.rs  ocrs_engine.rs  paddle_dict.rs  paddle_engine.rs  paddle_postprocess.rs  paddle_preprocess.rs  preprocess.rs  tesseract_engine.rs  text_layer.rs  windows_engine.rs  windows_native_engine.rs
src/parser/: file_structure.rs  lexer.rs  mod.rs  objects.rs
src/rendering/: color_space.rs  colors.rs  function.rs  glyph.rs  graphics.rs  image.rs  mod.rs  path.rs  renderer.rs  shading.rs  text.rs
src/signatures/: info.rs  mod.rs  verify.rs
src/standards/: common.rs  mod.rs  pdfa.rs  pdfx.rs
src/structure/: annotations.rs  metadata.rs  mod.rs  outlines.rs
tests/: CORPUS_REPORT.md  adversarial_tests.rs  corpus_structure_report.rs  corpus_tests.rs  external_corpus_tests.rs  feature_validation.rs  integration.rs  paddle_integration.rs  proptest_fuzz.rs
tests/private_corpus/: README.md
